# wmma_ops

./: .gitignore  AGENTS.md  README.md  analyze_isa.sh  autotune.py  benchmark_optimizations.py  benchmark_summary.py  build_and_test.sh  detailed_profiling.py  flash_attention.hpp  profile_wmma.py  rocprof_wmma.py  run_rocprof.sh  setup.py  test_fragment_loading.py  test_rocwmma_patch.py  wmma_device_helpers.hpp  wmma_gemm.hip  wmma_kernel_largetile.hpp  wmma_kernel_variants.hpp  wmma_kernels_optimized.hpp  wmma_kernels_pingpong.hpp  wmma_tile_mapping.hpp  wmma_tile_selection.hpp  wmma_xor_swizzle.hpp
docker/: Dockerfile.benchmark  Dockerfile.profiling  docker-compose.benchmark.yml  docker-compose.profiling.yml
docs/: PROFILING.md  WMMA_DEVELOPMENT_NOTES.md  wmma_fragment_layout_rdna3.md
examples/: README.md
examples/adelj_wmma_samples/: .gitignore  CMakeLists.txt  LICENSE  readme.md
examples/adelj_wmma_samples/cmake/: Dependencies.cmake
examples/adelj_wmma_samples/common/: hip_utils.hpp  matrix.hpp
examples/adelj_wmma_samples/hgemm/: CMakeLists.txt  bench.cpp  readme.md  test.cpp
examples/adelj_wmma_samples/hgemm/docs/: general.md  llm_focus.md
examples/adelj_wmma_samples/hgemm/include/: hgemm.hpp
examples/adelj_wmma_samples/hgemm/include/kernels/: common.hpp  rocblas.hpp  rocwmma.hpp  shared.hpp  wmma.hpp  wmma_opt_1.hpp  wmma_opt_2.hpp  wmma_opt_3.hpp  wmma_opt_4.hpp  wmma_opt_5.hpp  wmma_prefetch.hpp  wmma_shared.hpp  wmma_shared_warp.hpp  wmma_shared_warp_buf.hpp  wmma_shared_warp_buf_vec.hpp  wmma_shared_warp_vec.hpp
examples/adelj_wmma_samples/hgemm/src/: rocblas.cpp  shared.cpp  wmma.cpp  wmma_opt_1.cpp  wmma_opt_2.cpp  wmma_opt_3.cpp  wmma_opt_4.cpp  wmma_opt_5.cpp  wmma_prefetch.cpp  wmma_shared.cpp  wmma_shared_warp.cpp  wmma_shared_warp_buf.cpp  wmma_shared_warp_buf_vec.cpp  wmma_shared_warp_vec.cpp
examples/composable_kernel_issue/: issue_1434.md
examples/rocm_examples_sparse/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  ROCm-Examples-Portable-VS2017.sln  ROCm-Examples-Portable-VS2019.sln  ROCm-Examples-Portable-VS2022.sln  ROCm-Examples-VS2017.sln  ROCm-Examples-VS2019.sln  ROCm-Examples-VS2022.sln
examples/rocm_examples_sparse/HIP-Basic/: CMakeLists.txt  Makefile
examples/rocm_examples_sparse/HIP-Basic/assembly_to_executable/: CMakeLists.txt  Makefile  README.md  assembly_to_executable_vs2017.vcxproj  assembly_to_executable_vs2017.vcxproj.filters  assembly_to_executable_vs2019.vcxproj  assembly_to_executable_vs2019.vcxproj.filters  assembly_to_executable_vs2022.vcxproj  assembly_to_executable_vs2022.vcxproj.filters  main_gfx1201.s  main_gfx900.s  main_gfx950.s
examples/rocm_examples_sparse/HIP-Basic/bandwidth/: CMakeLists.txt  Makefile  bandwidth_vs2017.vcxproj  bandwidth_vs2017.vcxproj.filters  bandwidth_vs2019.vcxproj  bandwidth_vs2019.vcxproj.filters  bandwidth_vs2022.vcxproj  bandwidth_vs2022.vcxproj.filters  main.hip
examples/rocm_examples_sparse/HIP-Basic/bit_extract/: CMakeLists.txt  Makefile  bit_extract_vs2017.vcxproj  bit_extract_vs2019.vcxproj  bit_extract_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/cooperative_groups/: CMakeLists.txt  Makefile  cooperative_groups_vs2017.vcxproj  cooperative_groups_vs2019.vcxproj  cooperative_groups_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/device_globals/: CMakeLists.txt  Makefile  device_globals_vs2017.vcxproj  device_globals_vs2019.vcxproj  device_globals_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/device_query/: CMakeLists.txt  Makefile  device_query_vs2017.vcxproj  device_query_vs2019.vcxproj  device_query_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/dynamic_shared/: CMakeLists.txt  Makefile  dynamic_shared_vs2017.vcxproj  dynamic_shared_vs2019.vcxproj  dynamic_shared_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/events/: CMakeLists.txt  Makefile  events_vs2017.vcxproj  events_vs2019.vcxproj  events_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/gpu_arch/: CMakeLists.txt  Makefile  gpu_arch_vs2017.vcxproj  gpu_arch_vs2019.vcxproj  gpu_arch_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/hello_world/: CMakeLists.txt  Makefile  hello_world_vs2017.vcxproj  hello_world_vs2019.vcxproj  hello_world_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/hello_world_cuda/: CMakeLists.txt
examples/rocm_examples_sparse/HIP-Basic/hipify/: CMakeLists.txt  Makefile
examples/rocm_examples_sparse/HIP-Basic/inline_assembly/: CMakeLists.txt  Makefile  inline_assembly_vs2017.vcxproj  inline_assembly_vs2019.vcxproj  inline_assembly_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/llvm_ir_to_executable/: CMakeLists.txt  Makefile  llvm_ir_to_executable_vs2017.vcxproj  llvm_ir_to_executable_vs2019.vcxproj  llvm_ir_to_executable_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/matrix_multiplication/: CMakeLists.txt  Makefile  main.hip  matrix_multiplication_vs2017.vcxproj  matrix_multiplication_vs2017.vcxproj.filters  matrix_multiplication_vs2019.vcxproj  matrix_multiplication_vs2019.vcxproj.filters  matrix_multiplication_vs2022.vcxproj  matrix_multiplication_vs2022.vcxproj.filters
examples/rocm_examples_sparse/HIP-Basic/module_api/: CMakeLists.txt  Makefile  main.hip  module_api_vs2017.vcxproj  module_api_vs2019.vcxproj  module_api_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/moving_average/: CMakeLists.txt  Makefile  moving_average_vs2017.vcxproj  moving_average_vs2019.vcxproj  moving_average_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/multi_gpu_data_transfer/: CMakeLists.txt  Makefile  multi_gpu_data_transfer_vs2017.vcxproj  multi_gpu_data_transfer_vs2019.vcxproj  multi_gpu_data_transfer_vs2022.vcxproj
examples/rocm_examples_sparse/HIP-Basic/occupancy/: CMakeLists.txt  Makefile  occupancy_vs2017.vcxproj  occupancy_vs2019.vcxproj  occupancy_vs2022.vcxproj
examples/rocmlir_docs/: README.md
examples/rocwmma_samples/: CMakeLists.txt  Makefile  README.md  main.hip
rocwmma_patch/: rocwmma_gfx1151.hpp
(+65 files in other folders)
